# TwoPlayerSnake

./: .clang-format  .gitignore  BytesOperator.h  CMakeLists.txt  GameState.h  LICENSE  Messages.h  README.md  Serdes.cpp  Serdes.h  Serializers.h  Snake.cpp  Snake.h  SnakeClient.cpp  SnakeClient.h  SnakeGame.cpp  SnakeGame.h  SnakeGameLogic.cpp  SnakeGameLogic.h  SnakeServer.h  TODO.md  TSQueue.h  Utility.cpp  Utility.h  format.sh  main.cpp
test/: SerdesRoundtripTest.cpp
